# artnet-tool

./: .gitignore  README.md
.claude/: settings.json
.github/workflows/: release.yml
_bmad-output/brainstorming/: brainstorming-session-2026-03-06-001.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffold-and-directory-structure.md  1-2-ui-shell-dark-theme-shadcn-ui-and-3-tab-navigation.md  1-3-zustand-state-management-scaffold.md  1-4-rust-backend-structure-and-ipc-foundation.md  1-5-playback-engine-thread-isolation-scaffold.md  1-6-ci-cd-pipeline.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-03-06.md  prd.md  product-brief-ARTNET-TOOL-2026-03-06.md  (+2 more)
artnet-tool/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
artnet-tool/src-tauri/: Cargo.toml  tauri.conf.json
artnet-tool/src-tauri/src/: errors.rs  lib.rs  logging.rs  main.rs
artnet-tool/src-tauri/src/commands/: capture.rs  keyboard.rs  midi.rs  network.rs  playback.rs  project.rs  scheduler.rs  system.rs
artnet-tool/src-tauri/src/models/: dmx.rs  project.rs  scene.rs
artnet-tool/src-tauri/src/subsystems/boot/: mod.rs
artnet-tool/src-tauri/src/subsystems/capture/: mod.rs
artnet-tool/src-tauri/src/subsystems/midi/: mod.rs
artnet-tool/src-tauri/src/subsystems/monitor/: mod.rs
artnet-tool/src-tauri/src/subsystems/playback/: engine.rs  mod.rs  types.rs
artnet-tool/src-tauri/src/subsystems/project/: mod.rs
artnet-tool/src-tauri/src/subsystems/scheduler/: mod.rs
(+27 files in other folders)
